# ros2_town

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/village_interfaces/share/village_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/village_li/lib/village_li/: li3_node  li4_node
install/village_li/share/village_li/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/village_wang/lib/village_wang/: wang2_node
install/village_wang/share/village_wang/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/village_interfaces/: CMakeLists.txt
src/village_interfaces/msg/: Novel.msg
src/village_interfaces/srv/: BorrowMoney.srv  SellNovel.srv
src/village_li/: package.xml  setup.py
src/village_li/launch/: village_li.launch.py
src/village_li/village_li/: li3.py  li4.py  li4_pop.py
src/village_wang/: CMakeLists.txt  package.xml
src/village_wang/launch/: village.launch.py
src/village_wang/src/: wang2.cpp  wang2_pop.cpp
src/village_zhang/: CMakeLists.txt  package.xml
src/village_zhang/launch/: village_zhang.launch.py
src/village_zhang/src/: zhang3.cpp
village_interfaces/: CMakeLists.txt  package.xml
village_interfaces/msg/: Novel.msg
village_interfaces/srv/: BorrowMoney.srv  SellNovel.srv
village_li/: package.xml  setup.cfg  setup.py
village_li/village_li/: li3.py  li4.py  lisi.py
village_wang/: CMakeLists.txt
village_wang/src/: wang2.cpp
village_zhang/src/: zhang3.cpp
(+44 files in other folders)
